--- a/test-plone-4.3.x.cfg
+++ b/test-plone-4.3.x.cfg
@@ -14,6 +14,11 @@ parts +=
     zopepy
 
 
+[instance]
+zcml-additional =
+    <include package="plone.formwidget.contenttree" file="demo.zcml" />
+
+
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
