--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python: "2.7"
 before_install:
-  - pip install http://effbot.org/downloads/Imaging-1.1.7.tar.gz
+  - sudo apt-get install -y libjpeg-dev libgif-dev libpng-dev libz-dev
 install:
   - mkdir -p buildout-cache/eggs
   - mkdir -p buildout-cache/downloads
