--- a/travis.cfg
+++ b/travis.cfg
@@ -9,7 +9,7 @@ download-cache = buildout-cache/downloads
 
 [download]
 recipe = hexagonit.recipe.download
-url = https://launchpad.net/plone/4.3/4.3b2/+download/Plone-4.3b2-UnifiedInstaller.tgz
+url = https://launchpad.net/plone/4.3/4.3rc1/+download/Plone-4.3rc1-UnifiedInstaller.tgz
 
 [install]
 recipe = collective.recipe.cmd
