--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 python: "2.7"
 before_install:
-  - sudo apt-get install -y libjpeg-dev libgif-dev libpng-dev libz-dev
+  - pip install http://effbot.org/downloads/Imaging-1.1.7.tar.gz
 install:
   - mkdir -p buildout-cache/eggs
   - mkdir -p buildout-cache/downloads
   - python bootstrap.py -c travis.cfg
-  - bin/buildout -Nc travis.cfg
+  - bin/buildout -N -t 3 -c travis.cfg
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
